# ocaml-llama.cpp

./: .gitignore  .gitmodules  Makefile  README.md  dune-project
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml
lib/: dune  ggml_model_explorer.ml
lib/ggml/: Makefile  dune  function_description.ml  function_description_backend.ml  function_description_cpu.ml  function_description_gguf.ml  function_description_opt.ml  type_description.ml  types.ml
lib/ggml/const/: dune  type_const.ml
lib/llama.cpp/: Makefile  dune  function_description.ml  type_description.ml  types.ml
patches/: graph_callback_llama.patch
src/: dune  simple.ml
test/: dune  ggml_test.ml  model_explorer_test.ml
