(library
 (name ggml_const)
 (foreign_archives ../ggml)
 (ctypes
  (external_library_name libggml)
  (build_flags_resolver (vendored))
  (headers
   (preamble "#include \"../ggml.h\"\n#include \"../gguf.h\""))
  (type_description
   (instance Types)
   (functor Type_const))
  (generated_types Types_const_generated)
  (generated_entry_point C)))
